kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-analyzer
spec:
  replicas: 2

  selector:
    matchLabels:
      app: log-analyzer

  template:
    metadata:
      labels:
        app: log-analyzer

    spec:
      containers:
        - name: log-analyzer
          image: <ECR_REPO>:latest

          ports:
            - containerPort: 8000
